Redid java -> java-library

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
   //id 'com.github.johnrengelman.shadow' version '2.0.4'
 }
 
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'eclipse'
 
 sourceCompatibility = targetCompatibility = '11' // Need this here so eclipse task generates correctly.
